--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+0.1.12
+    - Add '.' to @INC so Module::Install continues to work.
 0.1.11
     - Using dbh_maker in a hash to connect() will not result
       in connect() passing through your arguments after merging
