--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+0.1.14:
+    - Allow Mojo::Pg-like postgresql:// links for schema connect.
+    - Switch from Module::Install to Dist::Zilla.
+
 0.1.13:
     - Add '.' to @INC so Module::Install continues to work,
       this time for real.
